tests/positive/hello-world.sp


greeting:String = "Hello";


print:Void(str:String){
    (* printf("%s", str); *)
}


main:Void(){

    print( greeting + "World!");
    return;
    
}