tests/negative/broken-if.sp


main:Void(){
    
    if 1+2 {
        (*wont reach this*)
        print("woopsy");
    }
}